Arguments: Fix zooming on reaction form on mobile

--- a/css/idea.less
+++ b/css/idea.less
@@ -370,7 +370,7 @@
 		
 		// General user styling
 		// --------------------
-		// Both arguments and reaction style the author the same.
+		// Author styling is similar for arguments and reactions.
 		.argument,
 		.reaction {
 			p {
@@ -521,6 +521,10 @@
 				padding: 5px 10px;
 				resize: none;
 				width: calc(100% - 22px);
+				
+				@media @phone {
+					font-size: 16px; // To prevent zooming.
+				}
 			}
 			input[type="submit"] {
 				float: right;
